samples/_failures_safe/1761466144_51b2c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09e1d52f.c: In function ‘main’:
./samples/SAFE/__tmp_09e1d52f.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Enter timestamp: ");
      |         ^~~~~~
./samples/SAFE/__tmp_09e1d52f.c:140:9: error: expected declaration or statement at end of input
